--- a/themes/sijmenit/layouts/partials/header.html
+++ b/themes/sijmenit/layouts/partials/header.html
@@ -16,6 +16,7 @@
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <link href="{{ .Site.BaseURL }}/css/clean-blog.min.css" rel="stylesheet">
+    <link href="{{ .Site.BaseURL }}/css/portfolio.css" rel="stylesheet">
 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
